Adopting for Java 8